tests/ivg/invalid/duplicate_font_definition.ivg
format IVG-3
define font f []
define font f []
